--- a/docs/message-queues.asciidoc
+++ b/docs/message-queues.asciidoc
@@ -1,4 +1,4 @@
-[[message-quques]]
+[[message-queues]]
 == Message Queues
 
 The Node.js Agent will automatically create spans for any activity to/from your Amazon SQS message queues.  In order to have those spans recorded, your message queue activity must  occur during a transaction.
