--- a/docs/message-queues.asciidoc
+++ b/docs/message-queues.asciidoc
@@ -40,7 +40,7 @@ To enable queue scheduling and queue processing with distributed tracing, use th
 
 Here's an example that uses the Node.js Agent API to store the `traceparent` as a message attribute and then uses that attribute to link your new transaction with the original.
 
-==== Storing the Traceparent
+**Storing the Traceparent**
 
 When sending the message, you'll want to add the trace as one of the `MessageAttributes`.
 [source,js]
@@ -68,7 +68,7 @@ sqs.sendMessage(params, function(err, data) {
 
 This will save the traceparent value so we can use it later on when receiving the messages.
 
-==== Applying the Traceparent
+**Applying the Traceparent**
 
 When we receive our queue messages, we'll check the message for our Traceparent header, and use it to start a new transaction.  By starting a transaction with this traceparent header we'll be linking the sending and receiving via distributed tracing. 
 
