--- a/docs/performance-tuning.asciidoc
+++ b/docs/performance-tuning.asciidoc
@@ -75,6 +75,19 @@ but increasing the size limit means that the combined overhead of these HTTP req
 as headers and metadata don't need to be re-sent that often.
 
 [float]
+[[performance-max-queue-size]]
+==== Max queue size
+
+Events (transactions, spans, and errors) are buffered when the agent can't keep
+up with sending them to the APM Server or if the APM server is down. If the
+buffer exceeds <<max-queue-size>>, then events are dropped to limit memory
+usage of the agent.
+
+A lower value will decrease the heap overhead (and possibly the CPU usage) of
+the agent, while a higher value makes it less likely to lose events in case of
+a temporary spike in throughput.
+
+[float]
 [[performance-server-timeout]]
 ==== APM Server Timeout
 
