feat: add sample_rate to spans and transactions (#2038)
* feat: sample_rate

Closes: https://github.com/elastic/apm-agent-nodejs/issues/2023

Adds sample_rate attribute to spans and transactions.

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -58,6 +58,9 @@ variable), then it should be removed.
 [float]
 ===== Bug fixes
 
+* Fixed bug where external services were not listed under Dependencies on the
+  APM Service Overview page due to the trace-context propagated `sample_rate`
+  value not being set on either transactions or spans.
 
 [[release-notes-3.13.0]]
 ==== 3.13.0 - 2021/04/06
