fix: span url hostname not ip (#2039)
* fix: hostname instead of IP address for span URL

Fixes https://github.com/elastic/apm-agent-nodejs/issues/2035

Drops use of the `http-request-to-url` library in favor of reconstructing the URL using the provided hostname information.

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -62,6 +62,9 @@ variable), then it should be removed.
 [float]
 ===== Bug fixes
 
+* Fixed bug where the URL property for outgoing HTTP request spans was set
+  with the server's IP address rather than its hostname. The Agent now sets
+  this property with the actual URL requested by Node.js.
 * Fixed bug where external services were not listed under Dependencies on the
   APM Service Overview page due to the trace-context propagated `sample_rate`
   value not being set on either transactions or spans.
