--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,10 +28,8 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-==== Unreleased
-
-[float]
-===== Breaking changes
+[[release-notes-3.14.0]]
+==== 3.14.0 - 2021/04/19
 
 [float]
 ===== Features
@@ -65,6 +63,7 @@ variable), then it should be removed.
 * Fixed bug where the URL property for outgoing HTTP request spans was set
   with the server's IP address rather than its hostname. The Agent now sets
   this property with the actual URL requested by Node.js.
+
 * Fixed bug where external services were not listed under Dependencies on the
   APM Service Overview page due to the trace-context propagated `sample_rate`
   value not being set on either transactions or spans.
