fix: docs name change for config

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -36,7 +36,7 @@ Notes:
 [float]
 ===== Features
 
-* Added <<capture-span-stack-traces-threshold, `captureSpanStackTracesThreshold`>>
+* Added <<span-frames-min-duration, `spanFramesMinDuration`>>
   configuration field, allowing users to set a time threshold value that spans
   must reach before the agent will add a stack trace to the span.
 
