--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -39,7 +39,8 @@ Notes:
 * Added <<span-frames-min-duration, `spanFramesMinDuration`>>
   configuration field, allowing users to set a time threshold value that spans
   must reach before the agent will add a stack trace to the span.
-- Prefer W3C "traceparent" header over "elastic-apm-traceparent" for incoming
+
+* Prefer W3C "traceparent" header over "elastic-apm-traceparent" for incoming
   requests. {pull}2079[#2079]
 
 [float]
