--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -566,7 +566,7 @@ A time value to control whether the agent will report stack traces for measured 
 
 When set to `0` the agent will not record stack traces for any spans.
 
-When set to a negative value (like `-1`) the agent will always record stack traces for spans.
+When set to a negative value (like `-1ms`) the agent will always record stack traces for spans.
 
 [[use-path-as-transaction-name]]
 ==== `usePathAsTransactionName`
