fix: 'TypeError: lastPrepareStackTrace' crash when used with React v17+
The root cause was https://github.com/facebook/react/pull/18708
temporarily doing `Error.prepareStackTrace = undefined` to get a stack
string. This wasn't handled correctly by error-callsites
(watson/error-callsites#3).

Fixes: #1980

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -48,6 +48,9 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Fix a crash (`TypeError: lastPrepareStackTrace`) in the agent when used with
+  React v17 and later ({issues}1980[#1980]).
+
 * Performance improvements have been made in error and stacktrace capture ({pull}2094[#2094]).
   This also included in two bug fixes:
 +
