--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -46,7 +46,7 @@ Notes:
   method (e.g. "GET", "PUT", "POST"), rather than "http". ({pull}2075[#2075])
 
 * Fixed error where SQS messages sent without an active transactions could
-  crash the agent.
+  crash the agent. ({issues}2113[#2113])
 
 [[release-notes-x.x.x]]
 ==== 3.16.0 - 2021/06/14
