--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,7 +29,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
+[[release-notes-3.18.0]]
+==== 3.18.0 2021/07/20
 
 [float]
 ===== Breaking changes
