--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,6 +28,19 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* The agent will no longer report couting metrics with a value of zero, and will
+  remove these metrics from the registry.
 
 [[release-notes-3.18.0]]
 ==== 3.18.0 2021/07/20
