--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,14 +28,16 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-==== Unreleased
 
-[float]
-===== Breaking changes
+[[release-notes-3.19.0]]
+==== 3.19.0 2021/08/05
 
 [float]
 ===== Features
+
 * The agent now supports the 3.x branch of apollo-server-express. ({pull}2155[#2155])
+
+* Add instrumentation support for mongodb@4.x. ({pull}2171[#2171])
 
 [float]
 ===== Bug fixes
@@ -43,11 +45,9 @@ Notes:
 * The agent will no longer report counting metrics with a value of zero, and will
   remove these metrics from the registry. ({pull}2163[#2163])
 
+
 [[release-notes-3.18.0]]
 ==== 3.18.0 2021/07/20
-
-[float]
-===== Breaking changes
 
 [float]
 ===== Features
