--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,6 +29,21 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+- Fix failing tests and a possible runtime crash in
+  `@elastic/elasticsearch@7.14.0` instrumentation.
+
+
 [[release-notes-3.19.0]]
 ==== 3.19.0 2021/08/05
 
