--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,6 +29,21 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* Ensure the internal HTTP(S) client requests made by the APM agent to APM
+  server are not themselves traced. ({issues}1168[#1168], {issues}1136[#1136])
+
+
 [[release-notes-3.19.0]]
 ==== 3.19.0 2021/08/05
 
